tests/snapshots/convert__Event__namespace.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode } from "vue";
createVNode("div", {
    onEvent: fn
}, null, 32);

