tests/snapshots/convert__Event__onClick.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode } from "vue";
createVNode("div", {
    onClick: fn
}, null);

